--- a/sources/config/config.ini
+++ b/sources/config/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 ; ----app config----
 ; 端口号
-app_port = 5000
+app_port = 5001
 
 ; ----logger config----
 logger_level = INFO
@@ -11,6 +11,7 @@ logger_path = data/log
 file_sys_db_path = data/db/file_system.json
 file_sys_config_path = sources/config/file_system_config.json
 file_save_path = data/file
+file_static_path = data/static
 
 ; ----user config----
 user_db_path = data/db/user.json
