--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+altgraph==0.17.4
 blinker==1.8.2
 click==8.1.7
 colorama==0.4.6
@@ -7,8 +8,13 @@ Flask-Assets==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jsmin==3.0.1
+macholib==1.16.3
 MarkupSafe==3.0.2
+packaging==24.2
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2024.10
 PyJWT==2.9.0
+setuptools==75.6.0
 tinydb==4.8.2
 webassets==2.0
 Werkzeug==3.1.1
