--- a/sources/config/file_system_config.json
+++ b/sources/config/file_system_config.json
@@ -1,10 +1,10 @@
 {
     "file_white_list": {
         "photo": ["png","jpg","jpeg","gif","svg","bmp","tiff"],
-        "data": ["zip","rar","7z"],
+        "data": ["zip","rar","7z","json"],
         "audio": ["mp3"],
         "video": ["mp4"],
-        "code": ["py"],
-        "text": ["yaml","xlsx", "xls","docx","pdf"]
+        "code": ["py","jar","html"],
+        "text": ["yaml","xlsx","xls","docx","pdf","txt"]
     }
 }
