分解js代码；资源注册改为json设定

--- a/sources/config/config.ini
+++ b/sources/config/config.ini
@@ -7,6 +7,9 @@ app_port = 5001
 logger_level = INFO
 logger_path = data/log
 
+; ----sources config----
+sources_config_path = sources/config/sources_config.json
+
 ; ----file system config----
 file_sys_db_path = data/db/file_system.json
 file_sys_config_path = sources/config/file_system_config.json
