--- a/sources/config/config.ini
+++ b/sources/config/config.ini
@@ -10,6 +10,9 @@ logger_path = data/log
 ; ----sources config----
 sources_config_path = sources/config/sources_config.json
 
+; ----lang config----
+lang_config_path = sources/config/lang.config
+
 ; ----file system config----
 file_sys_db_path = data/db/file_system.json
 file_sys_config_path = sources/config/file_system_config.json
