--- a/sources/config/sources_config.json
+++ b/sources/config/sources_config.json
@@ -3,24 +3,26 @@
         "login_css": {
             "output": "css/generate/login.css",
             "sources": [
-                "css/message_style.css",
-                "css/login_style.css",
+                "css/comp/message_popup_style.css",
+                "css/login/login_style.css",
                 "css/styles.css",
-                "css/spinner.css",
+                "css/comp/spinner.css",
                 "css/responsive.css"
             ]
         },
         "file_system_css": {
             "output": "css/generate/file_system.css",
             "sources": [
-                "css/message_style.css",
-                "css/confirm_popup_style.css",
-                "css/side_bar_style.css",
-                "css/page_select_style.css",
-                "css/image_style.css",
-                "css/file_sys_style.css",
+                "css/comp/message_popup_style.css",
+                "css/comp/confirm_popup_style.css",
+                "css/sidebar/side_bar_style.css",
+                "css/comp/page_select_style.css",
+                "css/comp/image_popup_style.css",
+                "css/file_system/file_add_style.css",
+                "css/file_system/file_sys_style.css",
+                "css/comp/text_popup_style.css",
                 "css/styles.css",
-                "css/spinner.css",
+                "css/comp/spinner_style.css",
                 "css/responsive.css"
             ]
         }
@@ -50,6 +52,7 @@
                 "js/sixbox/file_system/file_page.js",
                 "js/sixbox/file_system/file_add.js",
                 "js/sixbox/file_system/file_edit.js",
+                "js/sixbox/file_system/file_text_add.js",
                 "js/sixbox/file_system/file_system.js"
             ]
         }
