--- a/sources/config/file_system_config.json
+++ b/sources/config/file_system_config.json
@@ -5,6 +5,7 @@
         "3": ["mp3"],
         "4": ["mp4"],
         "code": ["py","jar","html"],
-        "text": ["yaml","xlsx","xls","docx","pdf","txt"]
+        "text": ["yaml","xlsx","xls","docx","pdf","txt"],
+        "app": ["exe"]
     }
 }
