新增富文本

--- a/sources/config/config.ini
+++ b/sources/config/config.ini
@@ -11,7 +11,7 @@ logger_path = data/log
 sources_config_path = sources/config/sources_config.json
 
 ; ----lang config----
-lang_config_path = sources/config/lang.config
+lang_config_path = sources/config/lang_config.json
 
 ; ----file system config----
 file_sys_db_path = data/db/file_system.json
