--- a/sources/config/lang_config.json
+++ b/sources/config/lang_config.json
@@ -20,5 +20,8 @@
     "019": "参数_page不能为负数",
     "020": "参数_limit不能小于1",
     "021": "参数nameLike不能为空",
-    "022": "操作成功"
+    "022": "操作成功",
+    "023": "标题不能为空",
+    "024": "内容不能为空",
+    "025": "新增失败"
 }
