--- a/sources/config/lang_config.json
+++ b/sources/config/lang_config.json
@@ -25,5 +25,8 @@
     "024": "内容不能为空",
     "025": "新增失败",
     "026": "读取文件失败",
-    "027": "写入文件失败"
+    "027": "写入文件失败",
+    "028": "用户不存在",
+    "029": "用户名不能为空",
+    "030": "缺少字段background"
 }
