--- a/sources/config/config.ini
+++ b/sources/config/config.ini
@@ -10,6 +10,9 @@ logger_path = data/log
 ; ----sources config----
 sources_config_path = sources/config/sources_config.json
 
+; ----database config----
+database_config_path = sources/config/database_config.json
+
 ; ----lang config----
 lang_config_path = sources/config/lang_config.json
 
@@ -27,3 +30,7 @@ session_db_path = data/db/session.json
 jwt_secret_key = vU7yZ4iH8pP7
 jwt_algorithm = HS256
 jwt_exp_delta_seconds = 86400
+
+; ----music config----
+music_db_path = data/db/music.json
+music_set_db_path = data/db/music_set.json
