--- a/sources/config/lang_config.json
+++ b/sources/config/lang_config.json
@@ -28,5 +28,6 @@
     "027": "写入文件失败",
     "028": "用户不存在",
     "029": "用户名不能为空",
-    "030": "缺少字段background"
+    "030": "缺少字段background",
+    "031": "默认文件不能删除"
 }
