--- a/sources/config/lang_config.json
+++ b/sources/config/lang_config.json
@@ -29,5 +29,8 @@
     "028": "用户不存在",
     "029": "用户名不能为空",
     "030": "缺少字段background",
-    "031": "默认文件不能删除"
+    "031": "默认文件不能删除",
+    "032": "歌手不能为空",
+    "033": "合集不能为空",
+    "034": "合集不存在"
 }
