--- a/sources/config/lang_config.json
+++ b/sources/config/lang_config.json
@@ -32,5 +32,6 @@
     "031": "默认文件不能删除",
     "032": "歌手不能为空",
     "033": "合集不能为空",
-    "034": "合集不存在"
+    "034": "合集不存在",
+    "035": "合集名不能为空"
 }
