--- a/sources/config/sources_config.json
+++ b/sources/config/sources_config.json
@@ -33,6 +33,7 @@
                 "css/common/comp_default.css",
                 "css/common/comp_sidebar.css",
                 "css/common/comp_navigation_bar.css",
+                "css/common/comp_popup_form.css",
                 "css/page/page_music_box.css",
                 "css/styles.css"
             ]
@@ -80,6 +81,8 @@
                 "js/sixbox/common/sidebar.js",
                 "js/sixbox/common/theme.js",
                 "js/sixbox/common/navigation_bar.js",
+                "js/sixbox/music_box/music_collect_control.js",
+                "js/sixbox/music_box/music_file_control.js",
                 "js/sixbox/music_box/music_box.js"
             ]
         }
