--- a/sources/config/sources_config.json
+++ b/sources/config/sources_config.json
@@ -32,6 +32,7 @@
             "sources": [
                 "css/common/comp_default.css",
                 "css/common/comp_sidebar.css",
+                "css/common/comp_popup_confirm.css",
                 "css/common/comp_navigation_bar.css",
                 "css/common/comp_popup_form.css",
                 "css/page/page_music_box.css",
@@ -83,6 +84,7 @@
                 "js/sixbox/common/navigation_bar.js",
                 "js/sixbox/music_box/music_collect_control.js",
                 "js/sixbox/music_box/music_file_control.js",
+                "js/sixbox/music_box/music_popup_control.js",
                 "js/sixbox/music_box/music_play.js",
                 "js/sixbox/music_box/music_box.js"
             ]
