--- a/sources/config/lang_config.json
+++ b/sources/config/lang_config.json
@@ -33,5 +33,6 @@
     "032": "歌手不能为空",
     "033": "合集不能为空",
     "034": "合集不存在",
-    "035": "合集名不能为空"
+    "035": "合集名不能为空",
+    "036": "音频不存在"
 }
