--- a/sources/config/config.ini
+++ b/sources/config/config.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 ; ----app config----
 ; 端口号
-app_port = 5002
+app_port = 5001
 
 ; ----logger config----
 logger_level = INFO
@@ -19,7 +19,7 @@ lang_config_path = sources/config/lang_config.json
 ; ----file system config----
 file_sys_db_path = data/db/file_system.json
 file_sys_config_path = sources/config/file_system_config.json
-file_save_path = data/file
+file_save_path = data\file
 file_static_path = data/static
 
 ; ----user config----
