--- a/sources/config/sources_config.json
+++ b/sources/config/sources_config.json
@@ -59,6 +59,7 @@
                 "js/sixbox/util/func.js",
                 "js/sixbox/util/requestor.js",
                 "js/sixbox/util/render.js",
+                "js/sixbox/common/confirm_popup.js",
                 "js/sixbox/common/sidebar.js",
                 "js/sixbox/common/page_selector.js",
                 "js/sixbox/common/theme.js",
@@ -80,9 +81,11 @@
                 "js/sixbox/util/func.js",
                 "js/sixbox/util/requestor.js",
                 "js/sixbox/util/render.js",
+                "js/sixbox/common/confirm_popup.js",
                 "js/sixbox/common/sidebar.js",
                 "js/sixbox/common/theme.js",
                 "js/sixbox/common/navigation_bar.js",
+                "js/spinner/spinner.js",
                 "js/sixbox/music_box/music_collect_control.js",
                 "js/sixbox/music_box/music_file_control.js",
                 "js/sixbox/music_box/music_popup_control.js",
