--- a/sources/config/lang_config.json
+++ b/sources/config/lang_config.json
@@ -35,7 +35,5 @@
     "034": "合集不存在",
     "035": "合集名不能为空",
     "036": "音频不存在",
-    "037": "音频不能为空",
-    "038": "执行器类型不能为空，且至少一个",
-    "039": "存在不合适的执行器"
+    "037": "音频不能为空"
 }
